Add Znamenny Keyboard layouts

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: m17n-db, debhelper (>= 9.0.0)
 Standards-Version: 3.9.5
 Vcs-Git: https://github.com/typiconman/m17n-cu.git
 Vcs-browser: https://github.com/typiconman/m17n-cu.git
-Homepage: http://sci.ponomar.net/
+Homepage: https://sci.ponomar.net/
 
 Package: m17n-cu
 Architecture: all
@@ -15,7 +15,7 @@ Recommends: ibus-m17n
 Description: Church Slavonic data for m17n libarary
  This package provides collation data and keyboard layouts
  for support of the Church Slavonic language.
- See http://sci.ponomar.net/ for documentation of keyboard layouts.
+ See https://sci.ponomar.net/ for documentation of keyboard layouts.
  .
  Developed by the Slavonic Computing Initiative.
 
